<resources>
    <string name="app_name">MultiScanner</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_off">Flash Off</string>
    <string name="auto_focus_on">Autofocus On</string>
    <string name="auto_focus_off">Autofocus Off</string>
    <string name="connect_new_bluetooth_device">Connect New Bluetooth Device</string>
    <string name="use_on_device_scanner">Use On-Device Scanner</string>
    <string name="use_bluetooth_scanner">Use Bluetooth Scanner</string>
    <string name="close">Close</string>
    <string name="menu">Menu</string>
    <string name="right_thumb_scanning">Right thumb scanning</string>
    <string name="scan_farmer_thumb_to_verify_farmer">Scan farmer thumb to verify farmer</string>
    <string name="press_the_centre_of_your_right_thumb_on_the_sensor_then_lift_it_off_when_the_progress_turns_green">Press the centre of your right thumb on the sensor, then lift it off when the progress turns green</string>
    <string name="complete_verification">Complete Verification</string>
    <string name="scan_weighting_scale">Scan weighting scale</string>
    <string name="align_the_scale_reading_into_the_center_of_the_camera_preview_then_click_detect_weight">Align the scale reading into the center of the camera preview then click \'Detect Weight\'</string>
    <string name="detect_weight">Detect Weight</string>
    <string name="type_the_weight_to_confirm">Type the weight to confirm</string>
    <string name="type_scale_reading">Type scale reading</string>
    <string name="rescan_the_scale">Rescan The Scale</string>
    <string name="confirm_bag_weight">Confirm Bag Weight</string>
    <string name="scanning_for_new_devices">Scanning for new devices…</string>
    <string name="scan_bag_weight_in_3_simple_steps">Scan bag weight in 3 simple steps</string>
    <string name="_1_align_the_scale_reading_into_the_center_of_the_red_rectangle_then_click_detect_weight">1. Align the scale reading into the center of the RED rectangle then click \'Detect Weight\'</string>
    <string name="_2_type_the_scanned_weight_in_the_input_field_to_confirm">2. Type the scanned weight in the input field to confirm</string>
    <string name="_3_click_confirm_bag_weight_to_finish">3. Click \'Confirm Bag Weight\' to finish</string>
    <string name="do_not_show_this_again">Do not show this again</string>
    <string name="dismiss">Dismiss</string>
    <string name="weight_scanned">Weight scanned</string>
    <string name="quantity_in_bag">Quantity in bag</string>
    <string name="click_detect_weight_to_start_detecting">Click \'Detect Weight\' to start detecting…</string>
    <string name="scan_failed_try_again">Scan failed. Try again</string>
    <string name="lfd_error_try_again">LFD Error. Try again</string>
    <string name="lfd_error_no_finger_detected_try_again">LFD Error, no finger detected. Try again</string>
    <string name="quality_too_low_scan_again">Quality too low. Scan again</string>
    <string name="enrollment_failed_try_again">Enrollment failed. Try again</string>
    <string name="looks_like_this_finger_has_been_scanned_already_please_scan_a_different_finger">Looks like this finger has been scanned already. Please scan a different finger</string>
    <string name="right_thumb_captured_successfully">Right thumb captured successfully</string>
    <string name="enrollment_complete">Enrollment complete</string>
    <string name="fingerprint_matched_found">Fingerprint matched found</string>
    <string name="match_failed_try_again">Match failed. Try again</string>
    <string name="extract_failed_try_again">Extract failed. Try again</string>
    <string name="scan_farmer_thumb_to_enrol_fingerprint">Scan farmer thumb to enrol fingerprint</string>
    <string name="scan_right_thumb">Scan RIGHT thumb</string>
    <string name="scan_left_thumb">Scan LEFT thumb</string>
    <string name="press_the_centre_of_your_left_thumb_on_the_sensor_then_lift_it_off_when_the_progress_turns_green">Press the centre of your LEFT thumb on the sensor, then lift it off when the progress turns green</string>
    <string name="scan_farmer_thumb">Scan farmer thumb</string>
    <string name="press_the_centre_of_your_thumb_on_the_sensor_then_lift_it_off_when_the_progress_turns_green">Press the centre of your thumb on the sensor, then lift it off when the progress turns green</string>
    <string name="complete_enrolment">Complete Enrolment</string>
    <string name="no_bluetooth_devices_found">No Bluetooth devices found</string>
    <string name="select_bluetooth_device">Select Bluetooth device</string>
    <string name="connecting_to_device">Connecting to device</string>
    <string name="connected_to">Connected to: %1$s</string>
    <string name="unable_to_connect_to_bluetooth_device">Unable to connect to bluetooth device</string>
    <string name="bluetooth_device_disconnected">Bluetooth device disconnected</string>
</resources>