<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bt_dialog"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_devices_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_bag_weight_in_3_simple_steps"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_align_the_scale_reading_into_the_center_of_the_red_rectangle_then_click_detect_weight"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_type_the_scanned_weight_in_the_input_field_to_confirm"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_click_confirm_bag_weight_to_finish"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"/>

        <CheckBox 
            android:id="@+id/show_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_show_this_again"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/dismiss"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAllCaps="false"
            android:text="@string/dismiss"
            android:textColor="#2B9D5C"
            android:background="@drawable/bg_rounded_corners_outline" />
    </LinearLayout>

</RelativeLayout>